--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,23 +2,23 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "C/C++ Runner: Debug Session",
-      "type": "cppdbg",
-      "request": "launch",
-      "args": [],
-      "stopAtEntry": false,
-      "externalConsole": true,
-      "cwd": "d:/ege_website/static/css",
-      "program": "d:/ege_website/static/css/build/Debug/outDebug",
-      "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
+      // "name": "C/C++ Runner: Debug Session",
+      // "type": "cppdbg",
+      // "request": "launch",
+      // "args": [],
+      // "stopAtEntry": false,
+      // "externalConsole": true,
+      // "cwd": "d:/ege_website/static/css",
+      // "program": "d:/ege_website/static/css/build/Debug/outDebug",
+      // "MIMode": "gdb",
+      // "miDebuggerPath": "gdb",
+      // "setupCommands": [
+      //   {
+      //     "description": "Enable pretty-printing for gdb",
+      //     "text": "-enable-pretty-printing",
+      //     "ignoreFailures": true
+      //   }
+      // ]
     }
   ]
 }
